making computer play

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="actions">
       <button>New Game</button>
       <div class="spacer"></div>
-      <button>Give Up</button>
+      <button id="give-up" disabled>Give Up</button>
     </div>
   </div>
   <script src="./tic-tac-toe.js"></script>
