making computer play attempt 2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="actions">
-      <button>New Game</button>
+      <button id="new-game" disabled>New Game</button>
       <div class="spacer"></div>
       <button id="give-up" disabled>Give Up</button>
     </div>
